[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
jishaku = "^2.5.0"
discord = "^1.7.3"
httpx = "^0.23.0"
requests = "^2.27.1"
utils = "^1.0.1"
colorama = "^0.4.4"
pymongo = "^4.1.1"
discord-webhook = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"